--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -10,6 +10,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Setup requirements
+        run: |
+          sudo apt-get update
+          sudo apt-get install gcc libgtk-3-dev libayatana-appindicator3-dev libx11-dev xorg-dev
+      - name: Download rules
+        run: curl https://raw.githubusercontent.com/ClearURLs/Rules/master/data.min.json -o rules.json
       - uses: actions/setup-go@v3
         with:
           go-version: 'stable'
