--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
-          ldflags: "-s -w -H=windowsgui"
+          ldflags: "-s -w ${{ matrix.goos == 'windows' && '-H=windowsgui' || '' }}"
+          pre_command: echo "deb http://deb.debian.org/debian stretch-backports main" >> /etc/apt/sources.list && apt-get update && apt-get install -y pkg-config gcc libgtk-3-dev libayatana-appindicator3-dev libx11-dev xorg-dev
           md5sum: false
           sha256sum: true
